--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,100 @@
 [versions]
-agp = "8.3.0"
-kotlin = "1.9.0"
-coreKtx = "1.10.1"
+accompanist-permissions = "0.30.1"
+agp = "8.1.0"
+firebase-messaging = "23.4.0"
+kotlin = "1.8.10"
+core-ktx = "1.9.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.6.1"
-activityCompose = "1.7.0"
-composeBom = "2023.08.00"
+androidx-test-ext-junit = "1.1.5"
+espresso-core = "3.5.1"
+lifecycle-runtime-ktx = "2.6.1"
+activity-compose = "1.7.0"
+compose-bom = "2023.10.01"
+hilt = "2.44"
+material-icons-extended = "1.3.1"
+retrofit = "2.9.0"
+kable = "0.27.0"
+proto = "0.9.4"
+io-grpc = "1.56.1"
+io-grpc-kotlin = "1.3.0"
+io-grpc-kotlin-jar = "1.3.0:jdk8@jar"
+
+navigation-compose = "2.5.3"
+navigation-activity-compose = "1.6.1"
+hilt-navigation-compose = "1.0.0"
+
+kotlinx-serialization = "1.5.1"
+
+lottie = "5.2.0"
+
+hilt-workmanager = "1.0.0"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permissions" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons-extended" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+firebase-messaging = { module = "com.google.firebase:firebase-messaging", version.ref = "firebase-messaging" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
+activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+ui = { group = "androidx.compose.ui", name = "ui" }
+ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+material3 = { group = "androidx.compose.material3", name = "material3" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+com-juul-kable-core = { module = "com.juul.kable:core", version.ref = "kable" }
+com-google-protobuf-protoc = "com.google.protobuf:protoc:3.23.4"
+com-google-protobuf-protobuf-javalite = "com.google.protobuf:protobuf-javalite:3.23.4"
+com-google-protobuf-gradle-plugin = { module = "com.google.protobuf:protobuf-gradle-plugin", version.ref = "proto" }
+io-grpc-grpc-android = { module = "io.grpc:grpc-android", version.ref = "io-grpc" }
+io-grpc-grpc-okhttp = { module = "io.grpc:grpc-okhttp", version.ref = "io-grpc" }
+io-grpc-grpc-protobuf-lite = { module = "io.grpc:grpc-protobuf-lite", version.ref = "io-grpc" }
+io-grpc-grpc-stub = { module = "io.grpc:grpc-stub", version.ref = "io-grpc" }
+io-grpc-grpc-kotlin-stub = { module = "io.grpc:grpc-kotlin-stub", version.ref = "io-grpc-kotlin" }
+
+io-grpc-protoc-gen-grpc-java = { module = "io.grpc:protoc-gen-grpc-java", version.ref = "io-grpc" }
+io-grpc-protoc-gen-grpc-kotlin = { module = "io.grpc:protoc-gen-grpc-kotlin", version.ref = "io-grpc-kotlin-jar" }
+
+navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
+navigation-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "navigation-activity-compose" }
+hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
+
+org-jetbrains-kotlinx-kotlinx-serialization-bom = { module = "org.jetbrains.kotlinx:kotlinx-serialization-bom", version.ref = "kotlinx-serialization" }
+org-jetbrains-kotlinx-kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core" }
+org-jetbrains-kotlinx-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json" }
+
+androidx-datastore = "androidx.datastore:datastore:1.0.0"
+security-crypto-datastore = "io.github.osipxd:security-crypto-datastore:1.0.0-beta01"
+
+lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version = "2.7.1" }
+hilt-workmanager = { module = "androidx.hilt:hilt-work", version.ref = "hilt-workmanager" }
+hilt-workmanager-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt-workmanager" }
+
+com-android-tools-build-gradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+org-jetbrains-kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+com-squareup-javapoet = "com.squareup:javapoet:1.13.0"
+
 
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "agp" }
-jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+com-android-application = { id = "com.android.application", version.ref = "agp" }
+com-android-library = { id = "com.android.library", version.ref = "agp" }
 
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+com-google-protobuf = { id = "com.google.protobuf", version.ref = "proto" }
+org-jetbrains-kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
+[bundles]
+grpc = ["io-grpc-grpc-android", "io-grpc-grpc-okhttp", "io-grpc-grpc-protobuf-lite", "io-grpc-grpc-stub", "io-grpc-grpc-kotlin-stub"]
+navigation = ["navigation-compose", "navigation-activity-compose", "hilt-navigation-compose"]
+serialization = ["org-jetbrains-kotlinx-kotlinx-serialization-core", "org-jetbrains-kotlinx-kotlinx-serialization-json"]
